<resources>
    <string name="app_name">JumpReplay</string>
    <string name="nav_header_subtitle">https://github.com/FourTwooo/JumpReplay</string>
    <string name="action_settings">更多选项</string>
    <string name="action_delete">清空</string>

    <string name="menu_home">捕获</string>
    <string name="menu_detail">详情内容</string>
    <string name="menu_gallery">收藏</string>
    <string name="menu_me">关于</string>

    <string name="empty_view">点击按钮开启HOOK</string>
    <string name="copy_code">复制命令</string>

    <string name="add_text">添加</string>
    <string name="delete">删除</string>
    <string name="todo">TODO</string>
    <string name="activity_label">意图拦截器</string>
    <string name="menu_intercept">意图拦截器</string>
    <string name="search">搜索</string>
    <string name="activity">Activity</string>
    <string name="reset_intent">重置为初始值</string>
    <string name="send_intent">发送意图</string>
    <string name="intent_app_name">应用名称</string>
    <string name="intent_app_activity">com.example.app\ncom.example.app.MainActivity</string>
    <string name="match_apps">匹配应用: </string>
    <string name="copy_am_code">复制</string>
    <string name="call_su_code">调用</string>
    <string name="is_root">使用root</string>
    <string name="star">收藏</string>
    <string name="settings">配置</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="disabled">禁用</string>
    <string name="add_link">创建快捷方式</string>
    <string name="setup">设置</string>
    <string name="float_window">悬浮窗(重启进程生效)</string>

    <string-array name="items_array">
        <item>root</item>
        <item>Shizuku</item>
        <item>Shizuku - 系统助手</item>
    </string-array>


    <string-array name="packages_array">
        <item>所有应用</item>
        <item>用户应用</item>
        <item>系统应用</item>
    </string-array>

</resources>